# popplonode

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  binding.gyp  getTextFromPageAsync.cpp  getTextFromPageAsync.h  index.js  main.cpp  package-lock.json  package.json  popplonode.cpp  popplonode.h
exemples/: extractmetadata.js
lib/: poppler-0.59.0.tar.xz  poppler.gyp  poppler.gypi
lib/poppler/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool  poppler-cairo-uninstalled.pc  poppler-cairo.pc  poppler-cpp-uninstalled.pc  poppler-cpp.pc  poppler-glib-uninstalled.pc  poppler-glib.pc  poppler-qt4-uninstalled.pc  poppler-qt4.pc  poppler-qt5-uninstalled.pc  poppler-qt5.pc  poppler-splash-uninstalled.pc  poppler-splash.pc  poppler-uninstalled.pc
lib/poppler/cpp/: Makefile  Makefile.in
lib/poppler/cpp/.deps/: libpoppler_cpp_la-poppler-document.Plo  libpoppler_cpp_la-poppler-embedded-file.Plo  libpoppler_cpp_la-poppler-font.Plo  libpoppler_cpp_la-poppler-global.Plo  libpoppler_cpp_la-poppler-image.Plo  libpoppler_cpp_la-poppler-page-renderer.Plo  libpoppler_cpp_la-poppler-page-transition.Plo  libpoppler_cpp_la-poppler-page.Plo  libpoppler_cpp_la-poppler-private.Plo  libpoppler_cpp_la-poppler-rectangle.Plo  libpoppler_cpp_la-poppler-toc.Plo  libpoppler_cpp_la-poppler-version.Plo
lib/poppler/cpp/.libs/: libpoppler-cpp.0.dylib  libpoppler-cpp.la  libpoppler-cpp.lai
lib/poppler/cpp/tests/: Makefile  poppler-dump  poppler-render
lib/poppler/fofi/: Makefile
lib/poppler/fofi/.deps/: libfofi_la-FoFiBase.Plo  libfofi_la-FoFiEncodings.Plo  libfofi_la-FoFiIdentifier.Plo  libfofi_la-FoFiTrueType.Plo  libfofi_la-FoFiType1.Plo  libfofi_la-FoFiType1C.Plo
lib/poppler/glib/: Makefile  Makefile.in  poppler-enums.c  poppler-enums.h  poppler-features.h
lib/poppler/glib/demo/: Makefile
lib/poppler/glib/reference/: Makefile  Makefile.in
lib/poppler/goo/: Makefile
lib/poppler/goo/.deps/: libgoo_la-GooHash.Plo  libgoo_la-GooList.Plo  libgoo_la-GooString.Plo  libgoo_la-GooTimer.Plo  libgoo_la-PNGWriter.Plo  libgoo_la-gfile.Plo  libgoo_la-glibc.Plo  libgoo_la-gmem.Plo  libgoo_la-gmempp.Plo  libgoo_la-grandom.Plo  libgoo_la-gstrtod.Plo
lib/poppler/lib/pkgconfig/: poppler.pc
lib/poppler/poppler/: Makefile  Makefile.in  StructElement.cc  poppler-config.h
lib/poppler/poppler/.deps/: libpoppler_la-Annot.Plo  libpoppler_la-Array.Plo  libpoppler_la-BuiltinFont.Plo  libpoppler_la-BuiltinFontTables.Plo  libpoppler_la-CMap.Plo  libpoppler_la-CachedFile.Plo  libpoppler_la-Catalog.Plo  libpoppler_la-CharCodeToUnicode.Plo  (+54 more)
lib/poppler/qt4/: Makefile
lib/poppler/qt5/: Makefile
lib/poppler/splash/: Makefile
lib/poppler/test/: Makefile  pdf-fullrewrite
lib/poppler/tmp/: poppler-cfgcmd.txt
lib/poppler/utils/: Makefile  Makefile.in  libparseargs.la  parseargs.lo
test/: Dockerfile  popplonode-test.js  simple-test.js
test/data/: debug.js  test.txt
(+30 files in other folders)
